--- a/analysis/juvenile_development.Rmd
+++ b/analysis/juvenile_development.Rmd
@@ -37,7 +37,7 @@ options(stringsAsFactors = FALSE)
 eclosion.dat <- read.csv("data/1.eclosion_times.csv")
 
 # remove vials seeded with more than 100 larvae
-unique(eclosion.dat[which(eclosion.dat$eclosing < 0), "ID"]) # 4 vials overseeded
+#unique(eclosion.dat[which(eclosion.dat$eclosing < 0), "ID"]) # 4 vials overseeded
 
 eclosion.dat.trim <- eclosion.dat %>% 
   filter(ID %in% eclosion.dat[which(eclosion.dat$eclosing < 0), "ID"] == FALSE)
@@ -48,6 +48,7 @@ ecl.dat <- reshape::untable(eclosion.dat.trim[ ,c(1:7, 9, 10)],
 
 # load wing length data
 wing_length <- read.csv("data/1.wing_length.csv") %>% 
+  filter(Side == 'L') %>% 
   # scale wing vein length to make effect size comparisons with other data sets?
   mutate(Length = as.numeric(scale(Length)))
 
@@ -56,64 +57,18 @@ wing_length$LINE <- paste0(wing_length$Treatment, substr(wing_length$Rep, 2, 2))
 
 ```
 
+# Survival analysis 
+We modeled juvenile development time using survival analysis. We measured the time in days from 1st instar larvae until eclosion (`EVENT` = 1) upon which flies were stored in ethanol before counting. Of the initially seeded 100 flies per vial, the remaining flies not emerging after two consecutive days of no observed eclosions were right censored (`EVENT` = 0) on the last observation day. In total 14400 larvae were seeded (100 larvae x 2 `Treatment` x 4 `LINE` per `Treatment` x 6 `VIAL` per `LINE` x 3 `SEED` days). For P1 only three vials were seeded on day B so we seeded 3 additional vials on day C. Four vials were seeded with too many larvae and excluded from analysis. In total `r ecl.dat %>% count(EVENT) %>% filter(EVENT == 1) %>% pull(n)` flies eclosed during the observation period leaving `r ecl.dat %>% count(EVENT) %>% filter(EVENT == 0) %>% pull(n)` individuals to be right censored on day 9. Censored flies were assigned sex based on the observed sex ratio of eclosees. We calculated the number of flies of each sex that emerged from each vial, and assigned the remaining censored individuals (of unknown sex) sex based on the proportion of individuals of each sex that did emerge, so that overall an equal sex ratio of females:males was assigned to each vial. 
 
-## Inspecting the raw data
-
-```{r, fig.height=4}
-cols <- c("M females" = "pink", 
-          "P females" = "red", 
-          "M males" = "skyblue", 
-          "P males" = "blue")
-
-eplot <- ecl.dat %>% 
-  filter(EVENT == 1) %>% 
-  mutate(var = paste(TRT, SEX)) %>% 
-  ggplot(aes(x = DAY, y = SEX, fill = var)) +
-  geom_boxplot() +
-  scale_fill_manual(values = c("pink", "skyblue", "red", "blue"), name = "") +
-  theme_bw() +
-  theme(legend.position = 'non') +
-  NULL
-
-lplot <- wing_length %>% 
-  mutate(var = paste(Treatment, Sex)) %>% 
-  ggplot(aes(x = Sex, y = Length)) +
-  geom_violin(aes(fill = var), alpha = .5) + 
-  geom_boxplot(aes(fill = var), width = .1, position = position_dodge(width = .9)) +
-  scale_colour_manual(values = c("pink", "skyblue", "red", "blue"), name = "") +
-  scale_fill_manual(values = c("pink", "skyblue", "red", "blue"), name = "") +
-  theme_bw() +
-  theme() +
-  NULL
-
-gridExtra::grid.arrange(eplot, lplot, ncol = 2)
-```
-**Figure 1:** Time to eclosion in days for flies in each treatment split by sex. Wing vein IV length has been scaled (subtracted the mean and divided by the standard deviation). We see one Monogamy male with an unusually small value for wing length - possible error in data entry or measurement error?
-
-
-# Some information on survival analysis... 
-
-Here are some useful links for understanding [survival analyis](). For instance, [this link](http://www.sthda.com/english/wiki/cox-proportional-hazards-model) provides an explanation of how to interpret hazard ratios. 
-
-The exponents of the coefficients from a Cox model give the hazard ratio, an estimate of the effect size of covariates. In short, hazard ratios give the probability of the event occurring compared to 'control' in our case compared to Monogamy females.
-
-* Hazard ratio = 1: no effect
-* Hazard ratio > 1: reduced hazard
-* Hazard ratio < 1: increased hazard
-
-
-# Fit the model for eclosion time in `coxme`
-
-We will model time to eclosion (in days) using survival analysis. We measured the time in days from 1st instar until eclosion (`EVENT` = 1) upon which flies were stored in ethanol before counting. Of the initially seeded 100 flies per vial, the remaining flies not emerging after two consecutive days of no observed eclosions were right censored (`EVENT` = 0) on the last observation day. In total 14400 larvae were seeded (100 larvae x 2 `Treatment` x 4 `LINE` x 6 `VIAL` x 3 `SEED`). For P1 only three vials were seeded on day B so we seeded 3 additional vials on day C. Four vials were seeded with too many larvae and excluded from analysis. In total `r ecl.dat %>% count(EVENT) %>% filter(EVENT == 1) %>% pull(n)` flies successfully emerged during the observation period leaving `r ecl.dat %>% count(EVENT) %>% filter(EVENT == 0) %>% pull(n)` individuals to be right censored on day 9. Censored flies were assigned sex based on the observed sex ratio of eclosees. We calculated the number of flies of each sex that emerged from each vial, and assigned the remaining censored individuals (of unknown sex) sex based on the proportion of individuals of each sex that did emerge, so that overall an equal sex ratio of females:males was assigned to each vial. 
-
-First we plot Kaplan-Meier survival curves and the median time to eclosion without considering our full experimental design. 
+### Kaplan-Meier survival curve
+First we plot Kaplan-Meier survival curves without considering our full experimental design. 
 
 ```{r, fig.width=4.5, fig.height=3.8}
 survminer::ggsurvplot(survfit(Surv(DAY, EVENT) ~ TRT + SEX, data = ecl.dat),
                       conf.int = TRUE,
                       risk.table = FALSE,
                       linetype = "SEX",
-                      palette = c("pink", "red", "skyblue", "blue"),
+                      palette = c("pink", "skyblue", "red", "blue"),
                       fun = "event",
                       xlim = c(12, 21),
                       xlab = "Days",
@@ -123,84 +78,42 @@ survminer::ggsurvplot(survfit(Surv(DAY, EVENT) ~ TRT + SEX, data = ecl.dat),
                       legend.labs = c("M \u2640","M \u2642",'P \u2640','P \u2642'),
                       break.time.by = 2,
                       ggtheme = theme_bw())
+
 ```
-**Figure X:** Kaplan-Meier curve for eclosion time (in days) for flies in each treatment and sex. +'s indicate censored individuals (n = 3552).
+**Figure X:** Kaplan-Meier curve for eclosion time (in days) for flies in each treatment and sex. +'s indicate censored individuals (n = `r ecl.dat %>% count(EVENT) %>% filter(EVENT == 0) %>% pull(n)`).
 
-```{r}
-# median eclosion times
-survfit(Surv(DAY, EVENT) ~ TRT + SEX, data = ecl.dat)
-```
-
-
-Next we need to check that the proportional hazards assumption is not violated before fitting the full model. Here we plot the log-log of the survival curves (take the natural logarithm of the cumulative hazard twice). Crossing hazards (lines) indicate violation of the proportional hazards assumption. 
-```{r, fig.width=4, fig.height=4}
-# assess proportional hazards assumption
-par(mar = c(2, 2, 2, 2))
-plot(survfit(Surv(DAY, EVENT) ~ TRT + SEX, data = ecl.dat), 
-     lty = 1:2, lwd = 2,
-     col = c("pink", "red", "skyblue", "blue"), 
-     fun = "cloglog")
-
-legend("bottomright", c("M \u2640","M \u2642",'P \u2640','P \u2642'), 
-       col = c("pink", "skyblue", "red", "blue"), 
-       lty = 1:2, 
-       lwd = 2,
-       bty = 'n'
-)
+### Check proportional hazards assumption
+Next we need to check that the proportional hazards assumption is not violated before fitting the model, where crossing hazards (lines) indicate violation of the proportional hazards assumption. 
+```{r, fig.width=4.5, fig.height=3.8}
+survminer::ggsurvplot(survfit(Surv(DAY, EVENT) ~ TRT + SEX, data = ecl.dat),
+                      conf.int = TRUE,
+                      risk.table = FALSE,
+                      linetype = "SEX",
+                      palette = c("pink", "skyblue", "red", "blue"),
+                      fun = "cloglog",
+                      xlim = c(13, 21),
+                      legend = 'right',
+                      legend.title = "",
+                      legend.labs = c("M \u2640","M \u2642",'P \u2640','P \u2642'),
+                      break.time.by = 2,
+                      ggtheme = theme_bw())
 
 ```
 **Figure X:** ln(-ln(survival))
 
-Looks good so we continue to fit the model. 
-
-
-## Fitting the `coxme` model
-
-We fit a mixed effects Cox Proportional hazards model using the `coxme` package, with time (days) to event (eclosion) as the response and `TRT` (Monogamy or Polyandry), `SEX` (female or male) and their interaction as predictors. We also need to account for the experimental design by including the random effects of `LINE`, `SEED` day and vial `ID`. We calculated p-values using likelihood ratio tests comparing the full model to a model where the fixed effect of interest was removed.
-
-```{r}
-# coxmod <- coxme(Surv(DAY, EVENT) ~ TRT * SEX + (1|LINE) + (1|SEED) + (1|ID), 
-#                 data = ecl.dat)
-
-# load in the model instead of running
-coxmod <- readRDS('output/coxmod.rds')
-
-# null models to generate P-values using likelihood ratio tests
-# coxmod_dropTRT <- coxme(Surv(DAY, EVENT) ~ 1 + SEX + (1|LINE) + (1|SEED) + (1|ID), data = ecl.dat)
-# coxmod_dropSEX <- coxme(Surv(DAY, EVENT) ~ TRT + 1 + (1|LINE) + (1|SEED) + (1|ID), data = ecl.dat)
-# coxmod_dropINT <- coxme(Surv(DAY, EVENT) ~ TRT + SEX + (1|LINE) + (1|SEED) + (1|ID), data = ecl.dat)
-
-coxmod_dropTRT <- readRDS('output/coxmod_dropTRT.rds')
-coxmod_dropSEX <- readRDS('output/coxmod_dropSEX.rds')
-coxmod_dropINT <- readRDS('output/coxmod_dropINT.rds')
-
-# make a table of the results
-bind_rows(
-broom::tidy(anova(coxmod, coxmod_dropTRT)),
-broom::tidy(anova(coxmod, coxmod_dropSEX)),
-broom::tidy(anova(coxmod, coxmod_dropINT))) %>% 
-  cbind(Parameter = rep(c('Treatment', 'Sex', 'Treatment x Sex'), each = 2)) %>% 
-  na.omit() %>% 
-  mutate(across(1:4, round, 3)) %>% 
-  as_tibble %>% 
-  relocate(Parameter, loglik, statistic, df, p.value) %>% 
-  kable() %>% 
-  kable_styling() %>% 
-  kable_styling(full_width = FALSE)
-```
-
-We see there is an effect of treatment and sex but not their interaction. We can calculate estimates and confidence intervals for the hazard ratio by taking the exponent of the coefficients ± 1.96 * sqrt(vcov(???)). Polyandrous flies have a reduced hazard compared to Monogamy flies, i.e. take longer to eclose (hazard ratio = `r round(exp(fixef(coxmod)[1]), 3)`, CI = `r round(exp(fixef(coxmod)[1] + c(-1.96, 1.96) * sqrt(vcov(coxmod))[1, 1]), 3)`). Males have a reduced hazard compared to females (hazard ratio = `r round(exp(fixef(coxmod)[2]), 3)`, CI = `r round(exp(fixef(coxmod)[2] + c(-1.96, 1.96) * sqrt(vcov(coxmod))[2, 2]), 3)`).
-
-
 ## Fit the model in `brms`
+We fit a Cox Proportional hazards model in `brms` using `family = cox()`, with time (days) to event (eclosion) as the response and sexual selection treatment (`TRT`; Monogamy or Polyandry), `SEX` (female or male) and their interaction as predictors with Seed day as a covariate. [See here](https://bookdown.org/content/4857/god-spiked-the-integers.html) for a helpful explanation on fitting survival models in `brms`. We also include replicate treatment as a random intercept term for each of the 8 lines and a random slope term to allow the effect of selection treatment to vary across replicate lines. We also include vial `ID` as a random intercept term as individuals emerging from the same vial may show a correlated response. 
 
-I found [this link](https://bookdown.org/content/4857/god-spiked-the-integers.html) useful for fitting survival models in `brms`. 
+#### Define priors
+We set fairly conservative normal priors on the fixed effects (mean = 0, sd = 1) and half Cauchy priors on the random effects - `LINE` - (mean = 0, scale = 0.1). All other priors were left at the default in `brms`.
 
+#### Run the model
+The model is run over 4 chains with 5000 iterations each (with the first 2500 discarded as burn-in), for a total of 2500*4 = 10,000 posterior samples. Note that some of the `brms` functionality is not currently available for models using the `cox` family (e.g. posterior predictive checks).
 ```{r}
 
 if(!file.exists("output/cox_brms.rds")){
   
-  cox_brm <- brm(DAY | cens(1 - EVENT) ~ TRT * SEX + (1|LINE) + (1|SEED) + (1|ID),
+  cox_brm <- brm(DAY | cens(1 - EVENT) ~ TRT * SEX + SEED + (TRT|LINE) + (1|ID),
                iter = 5000, chains = 4, cores = 4,
                control = list(max_treedepth = 20,
                               adapt_delta = 0.999),
@@ -211,35 +124,22 @@ if(!file.exists("output/cox_brms.rds")){
   cox_brm <- readRDS('output/cox_brms.rds')
 }
 
-summary(cox_brm)
-
-fixef(cox_brm) %>% 
-  data.frame() %>% 
-  rownames_to_column() %>% 
-  rename(Parameter = rowname) %>% 
-  kable() %>% 
-  kable_styling() %>% 
-  kable_styling(full_width = FALSE)
 ```
 
-## Posterior means of hazard functions ($\lambda$)
+### Table of model parameter estimates - eclosion time {.tabset}
 
+#### Formatted table 
+This tables shows the fixed effects estimates on eclosion time. The p column shows 1 - minus the “probability of direction”, i.e. the posterior probability that the reported sign of the estimate is correct given the data and the prior; subtracting this value from one gives a Bayesian equivalent of a one-sided p-value. Click the next tab to see a complete summary of the model and its output.
 ```{r}
-1 / exp(fixef(cox_brm)[, -2])
-```
-
-## Hypothesis testing - eclosion time
-
-```{r}
-
 hyp_test <- bind_rows(
   hypothesis(cox_brm, 'TRTP = 0')$hypothesis,
   hypothesis(cox_brm, 'SEXm = 0')$hypothesis,
-  hypothesis(cox_brm, 'TRTP:SEXm = 0')$hypothesis
+  hypothesis(cox_brm, 'TRTP:SEXm = 0')$hypothesis,
+  hypothesis(cox_brm, 'SEEDB = 0')$hypothesis,
+  hypothesis(cox_brm, 'SEEDC = 0')$hypothesis
 ) %>% 
-  mutate(Parameter = c('Polandry', 'Male', 'Polyandry x Male'),
+  mutate(Parameter = c('Treatment (P)', 'Sex (M)', 'Treatment (P) x Sex (M)', 'Seed (B)', 'Seed (C)'),
          across(2:5, round, 3)) %>% 
-  #select(-Hypothesis) %>% 
   relocate(Parameter, Estimate, Est.Error, CI.Lower, CI.Upper, Star)
 
 pvals <- bayestestR::p_direction(cox_brm) %>% 
@@ -250,96 +150,116 @@ pvals <- bayestestR::p_direction(cox_brm) %>%
   select(vars, p_val, star)
 
 hyp_test %>% 
-  mutate(vars = c('TRTP', 'SEXm', 'TRTP:SEXm')) %>% 
+  mutate(vars = c('TRTP', 'SEXm', 'TRTP.SEXm', 'SEEDB', 'SEEDC')) %>% 
   left_join(pvals %>% filter(vars != 'Intercept'), 
             by = c("vars")) %>% 
   select(Parameter, Estimate, Est.Error, CI.Lower, CI.Upper, `p` = p_val, star) %>% 
   rename(` ` = star) %>%
+  mutate(p = ifelse(p > 0.001, round(p, 3), '< 0.001')) %>% 
   kable() %>% 
   kable_styling(full_width = FALSE)
 
 ```
 
-Plot posteriors.
-```{r, fig.height=4, fig.width=6}
-# get posterior predictions
-post_cox <- posterior_samples(cox_brm) %>% 
-  as_tibble() %>%
-  select(contains("b_"), -contains("Intercept")) %>% 
-  mutate(draw = 1:n()) %>% 
-  pivot_longer(-draw) %>% 
-  mutate(key = str_remove_all(name, "b_"))
-
-post_cox %>%
-  ggplot(aes(value, key, fill = key)) + 
-  geom_vline(xintercept = 0, linetype = 2) + 
-  stat_halfeye(alpha = .8) +
-  scale_fill_brewer(palette = "Spectral") +
-  ylab("Model parameter") +
-  xlab("Effect on Wing length") + 
-  theme_ridges() +
-  theme(legend.position = "none") +
-  NULL
-
+#### Complete output from `summary.brmsfit()`
+```{r}
+cox_brm
 ```
 
+### Posterior effect size of treatment on eclosion time for each sex
+As `posterior_eprid()` is not available for `brms` models using the `cox` family, we manually calculate the estimates for each group from the posterior predictions. The $\beta$ coefficients from a Cox model measure the impact of covariates and give an estimate of the effect size ([see here](http://www.sthda.com/english/wiki/cox-proportional-hazards-model)). Taking the exponent of the coefficients give the hazard ratio. In short, hazard ratios give the probability of the event occurring compared to the 'control' group, in our case compared to Monogamy females, where:
 
+* Hazard ratio = 1 ($\beta$ = 0): no effect
+* Hazard ratio > 1 ($\beta$ > 0): reduced hazard (higher probabilty of eclosion)
+* Hazard ratio < 1 ($\beta$ < 0): increased hazard (lower probabilty of eclosion)
 
-
-
-
-
-```{r}
-# wrangle
-f <-
-  fixef(cox_brm) %>% 
-  data.frame() %>% 
-  rownames_to_column() %>% 
-  mutate(param = str_remove(rowname, "m|P")) %>% 
-  tidyr::expand(nesting(Estimate, Q2.5, Q97.5, param),
-         days = 0:24) %>% 
-  mutate(m  = 1 - pexp(days, rate = 1 / exp(Estimate)),
-         ll = 1 - pexp(days, rate = 1 / exp(Q2.5)),
-         ul = 1 - pexp(days, rate = 1 / exp(Q97.5)))
-  
-# plot!
-f %>% 
-  ggplot(aes(x = days)) +
-#  geom_hline(yintercept = .5, linetype = 3, aes(color = param)) +
-  geom_ribbon(aes(ymin = ll, ymax = ul, fill = param),
-              alpha = 1/2) +
- # geom_line(aes(y = m, aes(color = cols))) +
-  # scale_fill_manual(values = wes_palette("Moonrise2")[c(4, 1)], breaks = NULL) +
-  # scale_color_manual(values = wes_palette("Moonrise2")[c(4, 1)], breaks = NULL) +
-  # scale_y_continuous("proportion remaining", , breaks = c(0, .5, 1), limits = c(0, 1)) +
-  xlab("days to adoption") +
+```{r, fig.height=4, fig.width=4}
+posterior_samples(cox_brm) %>% 
+  as_tibble() %>%
+  select(starts_with("b_")) %>% 
+  mutate(draw = 1:n()) %>% 
+  mutate(M_f = b_Intercept,
+         P_f = b_Intercept + b_TRTP,
+         M_m = b_Intercept + b_SEXm,
+         P_m = b_TRTP + b_SEXm + `b_TRTP:SEXm`) %>% 
+  select(draw, M_f, P_f, M_m, P_m) %>% 
+  pivot_longer(cols = 2:5) %>% 
+  mutate(SEX = str_sub(name, -1),
+         TRT = str_sub(name, 1, 1)) %>%
+  select(draw, value, SEX, TRT) %>% 
+  pivot_wider(names_from = TRT,
+              values_from = value) %>%
+  mutate(`Difference in means (Poly - Mono)` = P - M) %>%
+  ggplot(aes(x = SEX, y = `Difference in means (Poly - Mono)`, fill = SEX)) +
+  geom_hline(yintercept = 0, linetype = 2) +
+  stat_halfeye() + 
+  scale_fill_brewer(palette = 'Pastel1', direction = 1, name = "") +
+  scale_colour_brewer(palette = 'Pastel1', direction = 1, name = "") +
+  labs(y = 'Difference in means between\nselection treatments (P - M)') +
+  theme_bw() +
+  theme(legend.position = 'none',
+        strip.background = element_blank(),
+        panel.grid.major.x = element_blank()) +
   NULL
+  
+```
+**Figure X:** Difference in mean $\beta$ coefficients for the survival analysis on eclosion time between the selection treatments (Polyandry - Monogamy).
 
-f %>% 
-  ggplot(aes(x = days, y = m, colour = param)) +
-  geom_line() +
-  geom_ribbon(aes(ymin = ll, ymax = ul, fill = param), alpha = 1/2) +
-  scale_colour_manual(values = c("pink", "red", "skyblue", "blue")) +
-  scale_fill_manual(values = c("pink", "red", "skyblue", "blue")) +
+# Body size differences (wing vein IV length) {.tabset}
+We measured the length of wing vein VI as a proxy for body size to test for differences between sexes and treatments as body size may influence development time. Prior to measurement, wing images were anonymised using a custom [python script provided by Henry Barton](https://github.com/henryjuho/Drosophila_wing_length) and then decoded for statistical analysis. Wing length was scaled by subtracting the mean (across all measurements) and dividing by the standard deviation.
+
+### Inspecting the raw data {.tabset}
+#### Violin plots
+```{r, fig.height=3.5, fig.width=5}
+wing_length %>% 
+  mutate(var = paste(Treatment, Sex)) %>% 
+  ggplot(aes(x = Sex, y = Length)) +
+  geom_violin(aes(fill = var), alpha = .5) + 
+  geom_boxplot(aes(fill = var), width = .1, position = position_dodge(width = .9)) +
+  scale_colour_manual(values = c("pink", "skyblue", "red", "blue"), name = "") +
+  scale_fill_manual(values = c("pink", "skyblue", "red", "blue"), name = "",
+                    labels = c('Monogamy Females', 'Monogamy Males',
+                               'Polandry Females', 'Polandry Males')) +
+  labs(y = 'Wing vein IV length') +
   theme_bw() +
   theme() +
   NULL
 
 ```
+**Figure X:** Wing vein IV length has been scaled (subtracted the mean and divided by the standard deviation). 
 
-# Body size differences between treatments and sexes
+#### Means and standard errors
+```{r}
+wing_length %>% 
+  group_by(Treatment, Sex) %>% 
+  summarise(Mean = mean(Length),
+            `Std. Errors` = sd(Length)/sqrt(n()),
+            N = n()) %>%
+  mutate(Treatment = recode(Treatment, M = "Monogamy", P = 'Polyandry'),
+         Sex = recode(Sex, M = "Male", F = 'Female')) %>% 
+  mutate(across(2:4, round, 2)) %>% 
+  kable() %>% 
+  kable_styling(full_width = FALSE)
+  
+```
 
-We measured the length of wing vein IV for a subset of flies as a correlate of body size, which may influence development time. 
+### Fitting the model for wing length in `brms`
+We fit a model in `brms` to test for differences in wing length between the sexes and sexual selection treatments. We fit treatment, sex and the treatment x sex interaction as fixed effects as well as Seed day as a covariate. As above, we included replicate treatment as a random intercept for each of the 8 lines and a random slope term for selection to allow the effect of treatment to vary across replicate lines. 
 
-```{r, fig.height=4, fig.width=6}
+#### Define priors
+As above we set conservative normal priors on the fixed effects (mean = 0, sd = 1) and half Cauchy priors on the random effects - `LINE` - (mean = 0, scale = 0.1). All other priors were left at the default in `brms`.
+
+#### Run the model
+The model is run over 4 chains with 10000 iterations each (with the first 2500 discarded as burn-in), for a total of 7500*4 = 30,000 posterior samples.
+```{r}
 
 if(!file.exists("output/wing_brms.rds")){
   
-  wing_brms <- brm(Length ~ Treatment * Sex + (1|LINE) + (1|Seed),
+  wing_brms <- brm(Length ~ Treatment * Sex + Seed + (Treatment|LINE),
                  data = wing_length,
-  iter = 5000, chains = 4, cores = 4,
+  iter = 10000, chains = 4, cores = 4,
   prior = c(set_prior("normal(0,1)", class = "b"),
-            set_prior("cauchy(0,1)", class = "sd")),
+            set_prior("cauchy(0,0.1)", class = "sd")),
   control = list(max_treedepth = 20,
                  adapt_delta = 0.999)
   )
@@ -349,47 +269,27 @@ if(!file.exists("output/wing_brms.rds")){
   wing_brms <- readRDS('output/wing_brms.rds')
 }
 
+```
+
+### Posterior predictive check of model fit
+```{r, fig.height=2, fig.width=3}
 pp_check(wing_brms)
-
 ```
 
+### Table of model parameter estimates - body size {.tabset}
 
-Plot posteriors.
-```{r, fig.height=4, fig.width=6}
-# get posterior predictions
-post_dat <- posterior_samples(wing_brms) %>% 
-  as_tibble() %>%
-  select(contains("b_"), -contains("Intercept")) %>% 
-  mutate(draw = 1:n()) %>% 
-  pivot_longer(-draw) %>% 
-  mutate(key = str_remove_all(name, "b_"))
-
-post_dat %>%
-  ggplot(aes(value, key, fill = key)) + 
-  geom_vline(xintercept = 0, linetype = 2) + 
-  stat_halfeye(alpha = .8) +
-  scale_fill_brewer(palette = "Spectral") +
-  ylab("Model parameter") +
-  xlab("Effect on Wing length") + 
-  theme_ridges() +
-  theme(legend.position = "none") +
-  NULL
-
-```
-
-
-## Hypothesis testing - body size
-
+#### Formatted table 
 ```{r}
-
 wing_test <- bind_rows(
   hypothesis(wing_brms, 'TreatmentP = 0')$hypothesis,
   hypothesis(wing_brms, 'SexM = 0')$hypothesis,
-  hypothesis(wing_brms, 'TreatmentP:SexM = 0')$hypothesis
+  hypothesis(wing_brms, 'TreatmentP:SexM = 0')$hypothesis,
+  hypothesis(wing_brms, 'SeedB = 0')$hypothesis,
+  hypothesis(wing_brms, 'SeedC = 0')$hypothesis,
 ) %>% 
-  mutate(Parameter = c('Polandry', 'Male', 'Polyandry x Male'),
+  mutate(Parameter = c('Treatment (P)', 'Sex (M)', 'Treatment (P) x Sex (M)',
+                       'Seed (B)', 'Seed (C)'),
          across(2:5, round, 3)) %>% 
-  #select(-Hypothesis) %>% 
   relocate(Parameter, Estimate, Est.Error, CI.Lower, CI.Upper, Star)
 
 pvals <- bayestestR::p_direction(wing_brms) %>% 
@@ -399,7 +299,7 @@ pvals <- bayestestR::p_direction(wing_brms) %>%
          star = ifelse(p_val < 0.05, "\\*", "")) %>%
   select(vars, p_val, star)
 
-wing_test %>% mutate(vars = c('TreatmentP', 'SexM', 'TreatmentP.SexM')) %>% 
+wing_test %>% mutate(vars = c('TreatmentP', 'SexM', 'TreatmentP.SexM', 'SeedB', 'SeedC')) %>% 
   left_join(pvals %>% filter(vars != 'Intercept'), 
               by = c("vars")) %>% 
     select(Parameter, Estimate, Est.Error, CI.Lower, CI.Upper, `p` = p_val, star) %>% 
@@ -410,28 +310,41 @@ wing_test %>% mutate(vars = c('TreatmentP', 'SexM', 'TreatmentP.SexM')) %>%
 
 ```
 
-## Extract posterior estimates and plot
-```{r, fig.height=4, fig.width=3.5}
-fitbrms <- wing_length %>%
-  modelr::data_grid(Treatment, Sex, LINE, Seed) %>%
-  add_fitted_draws(wing_brms) %>%
-  sample_frac(size = .5)
+#### Complete output from `summary.brmsfit()`
+```{r}
+wing_brms
+```
 
-fitbrms %>%
-  mutate(Treatment = ifelse(Treatment == "M", "Monogamy", "Polyandry"),
-         Sex = ifelse(Sex == "F", "Female", "Male"),
-         var = paste(Treatment, Sex)) %>%
-  ggplot(aes(x = Sex, y = .value, colour = var)) + 
-  geom_hline(yintercept = 0, linetype = 2) + 
-  stat_pointinterval(position = position_dodge(0.4), 
-                     fill = NA, .width = c(0.5, 0.95), alpha = 0.7) +
-  scale_colour_manual(values = c("pink", "skyblue", "red", "blue"), name = "") +
-  labs(y = 'Wing vein IV') +
+### Posterior effect size of treatment on body size for each sex
+We predict the mean wing vein IV length for each treatment and sex from the model averaged across the eight replicate selection lines and seeding days. The plots show the difference in posterior estimates between the P and M treatment for each sex separately. Note that females are larger than males but effect sizes are plotted for each sex separately.
+
+```{r, fig.height=3, fig.width=3}
+new <- expand_grid(Sex = c("M", "F"),
+                   Treatment = c("M", "P"),
+                   LINE = NA, Seed = NA) %>%
+  mutate(type = 1:n())
+
+posterior_epred(
+  wing_brms, newdata = new, re_formula = NA,
+  summary = FALSE, resp = 'Length') %>%
+  reshape2::melt() %>% rename(draw = Var1, type = Var2) %>%
+  as_tibble() %>%
+  left_join(new, by = "type") %>%
+  select(draw, value, Sex, Treatment) %>% 
+  pivot_wider(names_from = Treatment, 
+              values_from = value) %>%
+  mutate(`Difference in means (Poly - Mono)` = P - M) %>% 
+  ggplot(aes(x = Sex, y = `Difference in means (Poly - Mono)`, fill = Sex)) +
+  geom_hline(yintercept = 0, linetype = 2) +
+  stat_halfeye() + 
+  scale_fill_brewer(palette = 'Pastel1', direction = 1, name = "") +
+  scale_colour_brewer(palette = 'Pastel1', direction = 1, name = "") +
+  labs(y = 'Difference in means between\nselection treatments (P - M)') +
   theme_bw() +
-  theme(legend.position = 'top',
-        axis.title.x = element_blank()) +
+  theme(legend.position = 'none',
+        strip.background = element_blank(),
+        panel.grid.major.x = element_blank()) +
   NULL
 
 ```
-
-Males are smaller than females and there is no effect of selection treatment on wing length.
+**Figure XX:** Posterior estimates of treatment effects on wing vein IV length (proxy for body size).
